ws: Convert dip->px rects piecewise to avoid enclosing rect issues.

Using ConvertRectToPixel yields unexpected enclosing rect bounds.
(changes in dip locations can alter pixel bounds unintentionally)
Instead, convert the rect origin and size pixel values separately.

Bug: 871582
Test: No KSV (Ctrl-Alt-/) DCHECKs with non-1 ui/dsf scale [tablet mode].
Change-Id: Ia22ea75bb34382e323753bb173ce81b2c4b143b9
Reviewed-on: https://chromium-review.googlesource.com/1180265
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584870}
Former-commit-id: fd7064c6183ed4b00e69a1a10a01f17a009085ad